Api patch user - part 1
